packages/preview/zap/0.1.0/CONTRIBUTING.md
# Contributions

I'm glad you're reading this because it means you're interested in contributing to this project. We need developers who help this project grow 🌱!

Here are some important resources:
- [Repository](https://github.com/l0uisgrange/zap) holds the code and content of the `zap` package
- [GitHub Issues](https://github.com/l0uisgrange/zap/issues) indicates everything you can work on (of course, you are free to propose anything else 😉)
- [Discussions](https://github.com/l0uisgrange/zap/discussions) is where we talk about the package features and future
- [Releases](https://github.com/l0uisgrange/zap/releases) represents the present and history of this package project

## How to contribute

Contributing to this project is straightforward:
1. [Open an issue](https://github.com/l0uisgrange/zap/issues/new) explaining the modification you want to do on the package
2. Fork the repository on your own profile and start coding
3. Push your commits to your own repository
4. Open a Pull Request to the main `zap` repository branch

And you're done!
